tests/ui/proc-macro/derive-still-gated.stderr
error: cannot find attribute `derive_Empty` in the crate root
  --> $DIR/derive-still-gated.rs:6:3
   |
LL | #[derive_Empty]
   |   ^^^^^^^^^^^^ not found in the crate root

error: aborting due to 1 previous error

